changes in some code

--- a/notebooks/pyspark-ai.ipynb
+++ b/notebooks/pyspark-ai.ipynb
@@ -17,12 +17,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/07/05 11:44:08 WARN Utils: Your hostname, pop-os resolves to a loopback address: 127.0.1.1; using 192.168.1.10 instead (on interface wlp4s0)\n",
-      "23/07/05 11:44:08 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/07/05 12:23:05 WARN Utils: Your hostname, pop-os resolves to a loopback address: 127.0.1.1; using 192.168.1.10 instead (on interface wlp4s0)\n",
+      "23/07/05 12:23:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/07/05 11:44:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/07/05 11:44:08 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "23/07/05 12:23:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -89,7 +88,8 @@
    ],
    "source": [
     "# Search and ingest content from url into a DataFrame\n",
-    "tech_comp_df = spark_ai.create_df(\"https://companiesmarketcap.com/tech/largest-tech-companies-by-market-cap/\", [\"company_name\", \"market_cap_trillion\", \"country\"])\n",
+    "tech_comp_df = spark_ai.create_df(\"https://companiesmarketcap.com/tech/largest-tech-companies-by-market-cap/\", \n",
+    "                                  [\"company_name\", \"market_cap_trillion\", \"country\"])\n",
     "tech_comp_df.show()"
    ]
   },
@@ -127,10 +127,12 @@
    "source": [
     "# other ways to create a DataFrame\n",
     "# By default it will create a dataframe with significant columns. We can specify the column names as well.\n",
-    "# tech_comp_df = spark_ai.create_df(\"https://companiesmarketcap.com/tech/largest-tech-companies-by-market-cap/\", [\"company_name\", \"market_cap_trillion\", \"country\"])\n",
+    "# tech_comp_df = spark_ai.create_df(\"https://companiesmarketcap.com/tech/largest-tech-companies-by-market-cap/\", \n",
+    "#                                   [\"company_name\", \"market_cap_trillion\", \"country\"])\n",
     "\n",
     "# We can also use google search query to get the data. We need GOOGLE_API_KEY and GOOGLE_CSE_ID for that.\n",
-    "tech_comp_df = spark_ai.create_df(\"largest tech companies by market cap\", [\"company_name\", \"market_cap_trillion\", \"country\"])"
+    "tech_comp_df = spark_ai.create_df(\"largest tech companies by market cap\", \n",
+    "                                [\"company_name\", \"market_cap_trillion\", \"country\"])"
    ]
   },
   {
@@ -142,7 +144,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/07/05 11:44:28 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "23/07/05 12:24:09 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     },
     {
@@ -179,7 +181,8 @@
     }
    ],
    "source": [
-    "# we also have a local csv file that we can use (https://github.com/HariVM/Analytics/blob/master/1000%20Sales%20Records.csv)\n",
+    "# we also have a local csv file that we can use \n",
+    "# (https://github.com/HariVM/Analytics/blob/master/1000%20Sales%20Records.csv)\n",
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -3286,7 +3289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3294,19 +3297,21 @@
      "output_type": "stream",
      "text": [
       "\u001b[92mINFO: \u001b[0mGenerated code:\n",
-      "\u001b[34mdef\u001b[39;49;00m \u001b[32mcheck_sales_count_by_region\u001b[39;49;00m(df) -> \u001b[36mbool\u001b[39;49;00m:\u001b[37m\u001b[39;49;00m\n",
-      "    \u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mpyspark\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36msql\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m functions \u001b[34mas\u001b[39;49;00m F\u001b[37m\u001b[39;49;00m\n",
+      "\u001b[34mdef\u001b[39;49;00m \u001b[32mcheck_sales_count\u001b[39;49;00m(df) -> \u001b[36mbool\u001b[39;49;00m:\u001b[37m\u001b[39;49;00m\n",
+      "    \u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mpyspark\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36msql\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36mfunctions\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m col, \u001b[36msum\u001b[39;49;00m\u001b[37m\u001b[39;49;00m\n",
       "\u001b[37m\u001b[39;49;00m\n",
-      "    \u001b[37m# Group by 'Region' and count the number of sales\u001b[39;49;00m\u001b[37m\u001b[39;49;00m\n",
-      "    sales_count_by_region = df.groupBy(\u001b[33m'\u001b[39;49;00m\u001b[33mRegion\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m).agg(F.count(\u001b[33m'\u001b[39;49;00m\u001b[33mUnits Sold\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m).alias(\u001b[33m'\u001b[39;49;00m\u001b[33mSales Count\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m))\u001b[37m\u001b[39;49;00m\n",
+      "    \u001b[37m# Group by Region and sum the Units Sold\u001b[39;49;00m\u001b[37m\u001b[39;49;00m\n",
+      "    df_grouped = df.groupBy(\u001b[33m\"\u001b[39;49;00m\u001b[33mRegion\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m).agg(\u001b[36msum\u001b[39;49;00m(\u001b[33m\"\u001b[39;49;00m\u001b[33mUnits Sold\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m).alias(\u001b[33m\"\u001b[39;49;00m\u001b[33mTotal Sales\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m))\u001b[37m\u001b[39;49;00m\n",
       "\u001b[37m\u001b[39;49;00m\n",
-      "    \u001b[37m# Check if the DataFrame is empty\u001b[39;49;00m\u001b[37m\u001b[39;49;00m\n",
-      "    \u001b[34mif\u001b[39;49;00m sales_count_by_region.count() > \u001b[34m0\u001b[39;49;00m:\u001b[37m\u001b[39;49;00m\n",
+      "    \u001b[37m# Check if the minimum Total Sales is greater than 1000\u001b[39;49;00m\u001b[37m\u001b[39;49;00m\n",
+      "    min_sales = df_grouped.agg({\u001b[33m\"\u001b[39;49;00m\u001b[33mTotal Sales\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m: \u001b[33m\"\u001b[39;49;00m\u001b[33mmin\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m}).collect()[\u001b[34m0\u001b[39;49;00m][\u001b[34m0\u001b[39;49;00m]\u001b[37m\u001b[39;49;00m\n",
+      "\u001b[37m\u001b[39;49;00m\n",
+      "    \u001b[34mif\u001b[39;49;00m min_sales > \u001b[34m1000\u001b[39;49;00m:\u001b[37m\u001b[39;49;00m\n",
       "        \u001b[34mreturn\u001b[39;49;00m \u001b[34mTrue\u001b[39;49;00m\u001b[37m\u001b[39;49;00m\n",
       "    \u001b[34melse\u001b[39;49;00m:\u001b[37m\u001b[39;49;00m\n",
       "        \u001b[34mreturn\u001b[39;49;00m \u001b[34mFalse\u001b[39;49;00m\u001b[37m\u001b[39;49;00m\n",
       "\u001b[37m\u001b[39;49;00m\n",
-      "result = check_sales_count_by_region(df)\u001b[37m\u001b[39;49;00m\n",
+      "result = check_sales_count(df)\u001b[37m\u001b[39;49;00m\n",
       "\n",
       "\u001b[92mINFO: \u001b[0m\n",
       "Result: True\n"
@@ -3314,7 +3319,7 @@
     }
    ],
    "source": [
-    "manual_df.ai.verify(\"Sales count by Region\", \"Sales count by Region should be greater than 1000\")"
+    "manual_df.ai.verify(\"Sales count by Region should be greater than 1000\")"
    ]
   },
   {
